added event listener to add new to do popup

--- a/add.html
+++ b/add.html
@@ -8,4 +8,15 @@
     </div>
     <button type="submit">Add</button>
   </form>
+
+
+  <script>
+    // when form is submitted..
+    document.querySelecrot('form').addEventListener ('submit', (event) => {
+      event.preventDefault();
+
+      debugger;
+    });
+
+  </script>
 </body>
