--- a/main.html
+++ b/main.html
@@ -1,13 +1,36 @@
 <head>
+  <style>
+    button {
+      color:#fff;
+      width: 35px;
+      height: 35px;
+      border: none;
+      position: fixed;
+      top: 5px;
+      outline: none; 
+      border-radius: 3px;
+      padding: 0px;
+    }
+    #refresh {right: 45px;
+      background-color: #9c9c9c;
+    }
+    #devTools {right: 5px;
+      background-color: #d4d4d4;
+    }
+
+    button img {
+      width: 24px;
+    }
+
+  </style>
 </head>
 <body>
 	<h2>My Todos</h2>
   <ul>
-
   </ul>
 
-  <button id="refresh">Refresh</button>
-  <button id="devTools">Dev Tools</button>
+  <button id="refresh"><img src="images/refresh.png"></button>
+  <button id="devTools"><img src="images/wrench.png"></button>
 
   <script>
     // require electron and ipcRenderer
@@ -20,6 +43,7 @@
       li.appendChild(text);
       document.querySelector('ul').appendChild(li);
     });
+
 
     // send button signals to Electron App
     document.getElementById('refresh').addEventListener ('click', (event) => {
