added button to create directory and file

--- a/add.html
+++ b/add.html
@@ -1,14 +1,48 @@
 <head>
   <style>
+
+    button {
+      width: 24px;
+      height: 24px;
+      padding: 4px;
+      border: none;
+      top: 5px;
+      outline: none; 
+      border-radius: 3px;
+    }
+    button img {
+      width: 16px;
+    }
+    #submit {right: 5px;
+      background-color: #2ecc71;
+    }
+    input {
+      float: left;
+      height: 24px;
+      margin-right: 4px;
+      border-radius: 3px;
+      border: 1px solid #d4d4d4;
+    }
+
+    label {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+    }
+
+    .center {
+      width: 160px;
+      margin: 20px auto;
+    }
+
   </style>
 </head>
 <body>
-  <form>
-    <div>
-      <label>Enter your todo</label>
+  <form class="center">
+<!--     <div class="center"> -->
+      <label>Enter Todo</label><br>
       <input autofocus />
-    </div>
-    <button type="submit">Add</button>
+      <button id="submit" type="submit"><img src="images/plus.png"></button>
+ <!--    </div> -->
   </form>
 
 
